# causal-reasoning-dspy

./: README.md  architecture.md  pyproject.toml
outputs/: analysis_summary.json  case_1_results.json
src/: __init__.py  pipeline.py
src1/: dataset.py  signatures.py  solver.py
src2/: modules.py  pipeline.py  signatures.py  solver.py
src3/: dataset.py  pipeline.py
v1/: __init__.py  modules.py  pipeline.py
